src/style/main.styl
// FONTS
@font-face {
    font-family: 'Lato';
    src: url('../fonts/Lato-Light.woff2') format('woff2'),
        url('../fonts/Lato-Light.woff') format('woff');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Lato';
    src: url('../fonts/Lato-Bold.woff2') format('woff2'),
        url('../fonts/Lato-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Lato';
    src: url('../fonts/Lato-Regular.woff2') format('woff2'),
        url('../fonts/Lato-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

*
    margin 0
    padding 0
    box-sizing border-box


body 
    overflow hidden
    background linear-gradient(#E0E4FF, #B0B8FF)


/**
 * PRELOADER
 */

@import url("http://fonts.cdnfonts.com/css/monument-extended");

.preloader-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  background: #2C2F33; // Darker background color
  z-index: 9999; // Ensure it is on top of other elements
}

.preloader-container h1 {
  font-family: "Monument Extended", sans-serif;
  font-size: 100px;
  position: relative;
  -webkit-text-stroke: 1px #99AAB5;
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  transform: translateY(100%);
  letter-spacing: 1px;
  font-weight: 900;
  text-transform: uppercase;
}

.preloader-container h1::before {
  content: attr(data-title);
  position: absolute;
  background: #99AAB5; // Darker text color
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: var(--preloader);
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  transition: all ease 0.1s;
}

.hide-text {
  display: inline-flex;
  overflow: hidden;
}

.count {
  font-family: "Monument Extended", sans-serif;
  font-size: 300px;
  color: transparent;
  position: absolute;
  -webkit-text-stroke: 1px #99AAB5;
  transition: all ease 1s;
  font-weight: 900;
  text-transform: uppercase;
}
/**
 * TYPO
 */

p   
    font-family lato
    font-weight 200
    font-size 30px
    color #333

a
    text-decoration none
    font-weight 400
    color #0077b6
    cursor pointer
    pointer-events auto

b
    font-weight 400

/**
 * START
 */ 

// Start background
.start
    z-index 10
    position absolute
    background linear-gradient(#00aaff, #005f99)
    width 100vw
    height 100vh
    display flex
    flex-direction column
    justify-content center
    align-items center   
    font-family lato
    will-change transform

    p
        color white
        font-size 20px
        text-transform uppercase
        letter-spacing 3px
        font-weight 800


button 
    background #0077b6
    color white
    padding 10px 20px
    width 120px
    height 40px
    border none
    margin-top 30px
    border-radius 25px
    text-transform uppercase
    letter-spacing 3px
    cursor pointer
    user-select none
    pointer-events auto
    outline none
    font-size 18px
    transition: background 0.5s, transform 0.2s
    box-shadow 0 4px 6px rgba(0, 0, 0, 0.1)
    &:hover
        background #005f99 
        color white
        transform scale(1.05)

button.okay
    background rgba(255, 255, 255, 0.3)
    color #A64D79
    padding 10px 20px
    width 200px
    height 60px
    border-radius 30px
    font-size 18px
    transition-duration 0.3s
    border 2px solid #A64D79
    &:hover
        background rgba(166, 77, 121, 0.5)
        color white

/**
 * CANVAS
 */

.canvas
     position absolute
    z-index 3
    top 0
    left 0
    width 50vw
    height 100vh
    canvas
        position absolute
        top 0
        left 0
        pointer-events auto


/*
 * MUTE BUTTON
 */

img.mute,
img.unmute{
    z-index 6
    position absolute
    bottom 40px 
    right 40px
    width 20px
    height 20px
    cursor pointer
}

/*
 * CONTAINER 
 */
// Background
.background
    background #D1C4E9  // Light purple background
    z-index -2
    position absolute
    box-sizing border-box
    padding 30px
    width 100vw
    height 100vh
    display flex
    justify-content flex-start
    align-items center

    h1 
        font-family 'Work Sans', sans-serif;
        font-size 200px
        text-transform uppercase
        color rgba(81, 45, 168, 0.8)  // Darker purple with some transparency
        line-height 200px

// Container > Header
.container
    width 100vw
    height 100vh
    display flex
    flex-direction column
    justify-content center
    align-items flex-start
    
    .header
        z-index 2
        position absolute
        top 0
        padding 40px
        width 100vw
        display flex
        justify-content flex-start
        align-items center
        pointer-events auto

        .logo
            width 50px
            height 50px
            cursor pointer
            margin-right 10px

        h2
            text-decoration none
            font-family lato 
            font-size 15px
            color black
            text-transform uppercase
            font-weight 1000
            letter-spacing 3px
            margin 0px 15px 0px 15px
            cursor pointer

        // Sounds menu
        .sound
            transition-duration 0.2s
            color #95A0F5
            &:hover
                color black

        .soundActive
            color black

        .sounds
            position absolute 
            right 30px
            display flex
            flex-direction row

        span
            margin-top 2px
            font-weight 1000

    // Modals
    .modal
        background #E0F7FF
        z-index -10
        display flex
        align-items center
        justify-content center
        flex-direction column
        position absolute
        padding 30px
        width 100vw
        height 100vh
        opacity 0
        pointer-events none
        background #DBF1FF
        will-change transform


        .title
            position absolute
            display flex
            justify-content flex-start
            width 100%
            padding-left 30px
            h1  
                z-index -1
                font-family 'Work Sans', sans-serif;
                font-size 150px
                text-transform uppercase
                color #B0DFFF
                line-height 150px

            p.credits
                font-size 4vw
                line-height 1.5
                color #555 // Optional: Change text color
                margin-bottom 20px

            h1.credits
                color #FFDDAA 
            
            h1.welcome
                color #FFCCE0

        .container
            display flex
            flex-direction column
            justify-content center
            align-items center
            width 90%  // Ensures good spacing
            padding 10px

            // Close modal
        img.close
            position absolute
            top 30px
            right 30px
            width 30px
            height 30px
            cursor pointer
            pointer-events auto // Ensure the close button is interactive


    .credits-modal
    background #FFF8DC

    .welcome-modal 
        opacity 1
        z-index 3
        background #A64D79
            

.responsive-message
    position fixed
    bottom 10px
    left 10px
    background rgba(0, 0, 0, 0.7)
    color white
    padding 5px 10px
    border-radius 5px
    font-family lato
    font-size 12px
    z-index 10

// HIDDEN

.hidden{
    display none
    }

// ANIMATIONS CLASS

.fadeOut
    animation-name fadeOut
    animation-duration 1s
    animation-fill-mode forwards


.closeModal
    animation-name fadeOut
    animation-duration 0s
    animation-fill-mode forwards

.openModal
    animation-name openModal
    animation-duration 0.4s
    animation-fill-mode forwards

// ANIMATIONS KEYFRAMES

@keyframes fadeOut{
    0%{
        opacity 1 
        }
    100%{
        opacity 0 
        }
}

@keyframes openModal{
    
   0%{
        opacity 0 
        }
    100%{
        opacity 1 
        }
}

/* Media Queries for Responsive Design */
@media (max-width: 768px)
    .header
        flex-direction column
        align-items flex-start
        padding 20px

        .logo
            width 25px
            height 25px
            margin-bottom 10px

        h2
            font-size 4vw
            margin 5px 0

        .sounds
            flex-direction column
            align-items flex-start
            margin-top 10px

    .modal .title h1
        font-size 10vw

    .modal .container
        width 100%
        padding 10px

    button
        width 80px
        height 30px

    .canvas
        width 100vw
        height 50vh

@media (max-width: 480px)
  .canvas
    width 100vw
    height 40vh

  .start
    width 100vw
    height 100vh
    padding 20px
    justify-content center
    align-items center
    z-index 15

    p 
      font-size 4vw
      margin 10px 0
      text-align center
      margin: 0 auto

    button
      width 80%
      height 40px
      font-size 4vw
      margin: 10px auto
      z-index 20

  .header
    flex-direction row
    align-items center
    padding 20px // Increased padding
    margin-top 50px // Added margin to lower it down the screen
    z-index 15
    //background white

    .logo
      width 400px // Increased width
      height 400px // Increased height

    h2
      font-size 40vw // Adjusted font size to a more reasonable value
      margin 10px 0 // Adjusted margin

    .sounds
      position absolute
      top 100px
      left 10px
      display flex
      flex-direction row

  .modal
    padding 20px
    z-index 20
    width 100vw
    height 100vh
    position fixed
    top 0
    left 0
    display flex
    flex-direction column
    justify-content center
    align-items center

    .title h1.welcome
      font-size 12vw
      line-height 1.2

    button.okay
      width 80%
      height auto
      font-size 4vw
      padding 10px
      margin-top 500px // Adjusted margin to move the button down

    img.close
        width 20px
        height 20px

  .background
    padding 10px

    h1
      font-size 50px
      line-height 80px

  .container
    padding 10px

    .header
      padding 5px

      .logo
        width 40px
        height 40px

      h2
        font-size 14px
        letter-spacing 1px

      .sounds
        right 10px

  .preloader-container
    display none

    h1
      font-size 10vw
      -webkit-text-stroke 0.5px #21258A

    .count
      font-size 20vw
      -webkit-text-stroke 0.5px #21258A

